cart names shortening function to avoid wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -329,7 +329,7 @@ i:hover {
   }
   .modal-section {
     width: 500px;
-    top: 3;
-    right: 0;
+    top: 3rem;
+    right: 0rem;
   }
 }
